SplitWorlds vaccination tweaks